- Added missing critter powers from Dark Terrors, courtesy of Keeper M. 
- Per updated Runnerhub Rules, the Liminal bodies are now available and Armor enhancements can be added to skulls and torsos.

New Strings:

- Checkbox_DiceRoller_VariableGlitch

Build 203

Application Changes:

- Fixed an issue with inability to remove cyberware added to vehicle plugins. Fixes #2918
- Fixed behaviour of custom improvement cxreation not properly connecting to a group.
- Fixed an issue with powers when toggling between rulesets with the option to use a second magic attribute for MysAds. Might be a fix for #2919 and #2917?
- Fixed the Household Gremlins lifestyle quality causing low-price houses to generate money.
- Fixed an issue with inability to remove metamagics or initiate grades in create mode.
- Fixed a crash when removing a mentor spirit quality if an adept character has changed their priority to mundane. Caused by MAG attribute being null. Fixes #2928
- Added support for drugcomponents.xml in the translator.
- Added missing Source detail for adept powers.
- Fixed a crash when loading old characters that have a Total Rating greater than the Total Maximum Levels on load.
- Fixed an issue with editing custom improvements causing them to visibly appear is if they had fallen out of their group.
- Exposed the DisplayName of objects to the Print method. Allows for melee weapons that have different names to be shown separately on a character sheet.
- Added an AmmoName property to weapons that allows using a specifically named gear to be used as ammo.
- Fixed an issue with custom sheets entries not loading properly when using custom_ file masks.
- Fixed an issue with removing qualities with levels not displaying properly. Fixes #2950
- Fixed issues with Locations not setting their location text properly in career mode. 
- The Reload form now shows the Rating of ammo if greater than zero.